Updates wegen tests